# decisionmemory-database-manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  LIMITATIONS.md  README.md  TERMS.md  THIRD_PARTY_NOTICES.md  alembic.ini  docker-compose.hosted.yml  docker-compose.yml  llms.txt  pyproject.toml  render.yaml  requirements.txt  server.json  smithery.yaml  ssrt-phase2-spec.md  ssrt-spec.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
alembic/: env.py
assets/: generate_evolution.html  generate_evolution_zh.html  generate_header.html  generate_header_zh.html  generate_l1l2l3.html  generate_owm.html  generate_schema.html  generate_schema_zh.html  generate_whale_compare.html
dashboard/: index.html
database-manager/: SKILL.md
database-manager/lancedb-hybrid/: Cargo.toml  PLAN.md
database-manager/lancedb-hybrid/src/: main.rs
decisionmemory-plugin/: .mcp.json  README.md
deploy/: Caddyfile
docs/: API.md  ARCHITECTURE.md  AWESOME_LISTS.md  BEFORE_AFTER.md  DAILY_REFLECTION_SETUP.md  EXECUTION_LOG.md  GETTING_STARTED.md  MT5_SYNC_SETUP.md  MT5_SYNC_V3.md  OWM_FRAMEWORK.md  QUICK_START.md  README_OLD_2026-04-05.md  README_ZH.md  REFLECTION_ENGINE_GUIDE.md  REFLECTION_FORMAT.md  RESEARCH_LOG.md  ROADMAP.md  SCHEMA.md  TDR_SPEC_v1.md  TUTORIAL.md  TUTORIAL_ZH.md  USE_CASES.md  VALIDATION_RESULTS.md  anti-resonance-package.md  article-adding-memory-to-ea.md  blog-evolution-experiment-zh.md  blog-evolution-experiment.md  decision-ai-failure-taxonomy.md  deployment.md  example_strategy_prompt.md  generate_cover.py  hosted-api-spec.md
hosted/: server.py
reports/: analyze_decision-maker_meta_report.md  daily_2026-03-01.json  daily_2026-03-01.txt  decision-maker_fingerprint_MIXED_20260319.md  decision-maker_fingerprint_XAUUSD_20260318.md  distribution-steps.md  documentation-neutralization-paths.txt  market-research-2026-03.md  research-01-competitors.md  research-02-channels.md  research-03-painpoints.md  research-04-seo-pricing.md  weekly_2026-03-01.json  weekly_2026-03-01.txt
research/: README.md
scripts/: analyze_decision_maker.py  backfill_audit_chain.py  daily_reflection.py  decision_adapter.py  demo.py  export_mt5_csv.py  generate_index.py  live_executor.py  mt5_sync.py  mt5_sync_v3.py  setup-databases.sh  start-surreal.sh  strategy_definitions.py
tests/: conftest.py  test_adaptive_risk.py  test_anti_resonance.py  test_audit.py  test_audit_chain.py  test_auth.py  test_backtest_importer.py  test_backtester.py  test_binance_adapter.py  test_changepoint.py  test_context_builder.py  test_context_drift.py  test_dashboard_api.py  test_dashboard_content.py  test_dashboard_intelligence.py  test_dashboard_timeseries.py  test_data_protocol.py  test_decision_log_reader.py  test_decision_memory_skill_contract.py  test_discovery_parser.py  test_dqs.py  test_embedding.py  test_engine.py  test_event_log_reader.py  test_evolution_discovery.py  test_evolution_endpoints.py  test_evolution_mcp_tools.py  test_evolution_models.py  test_evolution_research_log.py  test_export_backtest_decisions.py  test_generator.py  test_journal.py  (+51 more)
(+241 files in other folders)
