[project]
name = "decisionmemory-protocol"
version = "0.5.2"
description = "Decision audit trail + persistent memory for AI decision_making agents. SHA-256 tamper detection, outcome-weighted recall, strategy evolution via MCP."
authors = [{name = "Mnemox", email = "contact@mnemox.ai"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "decision_making", "ai", "memory", "agent", "reflection", "audit", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Decision",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]
lint = [
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]
dev = [
    "decisionmemory-protocol[test,lint]",
    "pre-commit>=3.6.0",
]
dashboard = [
    "streamlit",
    "plotly",
]
replay = [
    "instructor>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.39.0",
    "pyyaml>=6.0",
]
validate = [
    "deflated-sharpe>=0.1.0",
]
postgres = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
]
surreal = [
    "surrealdb>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/mnemox-ai/decisionmemory-protocol"
Documentation = "https://github.com/mnemox-ai/decisionmemory-protocol/tree/master/docs"
Repository = "https://github.com/mnemox-ai/decisionmemory-protocol"
Issues = "https://github.com/mnemox-ai/decisionmemory-protocol/issues"
Changelog = "https://github.com/mnemox-ai/decisionmemory-protocol/blob/master/CHANGELOG.md"

[project.scripts]
decisionmemory = "decisionmemory.cli:cli"
decisionmemory-protocol = "decisionmemory:main"
decisionmemory-api = "decisionmemory.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["decisionmemory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
markers = [
    "integration: marks tests that require real API keys",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
