[package]
name = "lancedb-hybrid"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "57.3.0"
fastembed = "5.11.0"
futures = "0.3.32"
lancedb = "0.26.2"
# Tokio is required for LanceDB async ops
tokio = { version = "1", features = ["full"] }

# No SurrealDB SDK to keep binary bloat down! We will use std::net natively.
